; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_pcb.c_inpcb_gc_sched.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_pcb.c_inpcb_gc_sched.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inpcbinfo = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i64 }

@inpcb_timeout_lock = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@inpcb_garbage_collecting = common dso_local global i32 0, align 4
@INPCB_GCREQ_THRESHOLD = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @inpcb_gc_sched(%struct.inpcbinfo* %0, i64 %1) #0 {
  %3 = alloca %struct.inpcbinfo*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.inpcbinfo* %0, %struct.inpcbinfo** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = call i32 @lck_mtx_lock_spin(i32* @inpcb_timeout_lock)
  %7 = load i32, i32* @TRUE, align 4
  store i32 %7, i32* @inpcb_garbage_collecting, align 4
  %8 = load %struct.inpcbinfo*, %struct.inpcbinfo** %3, align 8
  %9 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.inpcbinfo*, %struct.inpcbinfo** %3, align 8
  %13 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %11, %15
  store i64 %16, i64* %5, align 8
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* @INPCB_GCREQ_THRESHOLD, align 8
  %19 = icmp sgt i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  store i64 129, i64* %4, align 8
  br label %21

21:                                               ; preds = %20, %2
  %22 = load i64, i64* %4, align 8
  switch i64 %22, label %35 [
    i64 128, label %23
    i64 129, label %29
  ]

23:                                               ; preds = %21
  %24 = load %struct.inpcbinfo*, %struct.inpcbinfo** %3, align 8
  %25 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = call i32 @atomic_add_32(i64* %26, i32 1)
  %28 = call i32 (...) @inpcb_sched_timeout()
  br label %41

29:                                               ; preds = %21
  %30 = load %struct.inpcbinfo*, %struct.inpcbinfo** %3, align 8
  %31 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = call i32 @atomic_add_32(i64* %32, i32 1)
  %34 = call i32 (...) @inpcb_sched_timeout()
  br label %41

35:                                               ; preds = %21
  %36 = load %struct.inpcbinfo*, %struct.inpcbinfo** %3, align 8
  %37 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 2
  %39 = call i32 @atomic_add_32(i64* %38, i32 1)
  %40 = call i32 (...) @inpcb_sched_lazy_timeout()
  br label %41

41:                                               ; preds = %35, %29, %23
  %42 = call i32 @lck_mtx_unlock(i32* @inpcb_timeout_lock)
  ret void
}

declare dso_local i32 @lck_mtx_lock_spin(i32*) #1

declare dso_local i32 @atomic_add_32(i64*, i32) #1

declare dso_local i32 @inpcb_sched_timeout(...) #1

declare dso_local i32 @inpcb_sched_lazy_timeout(...) #1

declare dso_local i32 @lck_mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
